--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="icon" href="http://giova445.github.io/avocadoDOM/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
