--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <link rel="icon" href="http://giova445.github.io/avocadoDOM/favicon.ico" />
+    <link rel="icon" href="https://giova445.github.io/avocadoDOM/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="Web site created using create-snowpack-app"
     />
     <!--
-      Snowpack will replace http://giova445.github.io/avocadoDOM/ with the value you have for `baseUrl` in `snowpack.config.js`.
+      Snowpack will replace https://giova445.github.io/avocadoDOM/ with the value you have for `baseUrl` in `snowpack.config.js`.
       Make sure to update it with your GitHub Page URL. https://<your-username>.github.io/<your-repo-name>
 
       More about config options:
@@ -19,7 +19,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://giova445.github.io/avocadoDOM/_dist_/index.css"
+      href="https://giova445.github.io/avocadoDOM/_dist_/index.css"
     />
     <title>Snowpack & Tailwind App</title>
   </head>
@@ -52,6 +52,6 @@
     </div>
 
     <!-- Add more scripts here -->
-    <script type="module" src="http://giova445.github.io/avocadoDOM/_dist_/index.js"></script>
+    <script type="module" src="https://giova445.github.io/avocadoDOM/_dist_/index.js"></script>
   </body>
 </html>
